import("//build/dotfile_settings.gni")
import("//third_party/angle/dotfile_settings.gni")

buildconfig = "//build/config/BUILDCONFIG.gn"

script_executable = "python3"

default_args = {
	v8_enable_gdbjit = false
	v8_imminent_deprecation_warnings = false

	rtc_link_task_queue_impl = false
	rtc_include_ilbc = false

	crashpad_dependencies = "chromium"

	angle_vulkan_headers_dir = "//third_party/vulkan-deps/vulkan-headers/src"
	angle_vulkan_loader_dir = "//third_party/vulkan-deps/vulkan-loader/src"
	angle_vulkan_tools_dir = "//third_party/vulkan-deps/vulkan-tools/src"
	angle_vulkan_validation_layers_dir = "//third_party/vulkan-deps/vulkan-validation-layers/src"

	fuchsia_sdk_readelf_exec = "//third_party/llvm-build/Release+Asserts/bin/llvm-readelf"
  	fuchsia_target_api_level = 11

	devtools_visibility = [
		"*"
	]
}

no_check_targets = [
	# //v8, https://crbug.com/v8/7330

	"//v8/src/inspector:inspector", # 20 erros
	"//v8/test/cctest:cctest_sources", # 15 erros
	"//v8/test/unittests:inspector_unittests_sources", # 2 erros
	"//v8:cppgc_base", # 1 erro
	"//v8:v8_internal_headers", # 11 erros
	"//v8:v8_libplatform", # 2 erros

	"//base/allocator/partition_allocator:partition_alloc # 292 erros
]

exec_script_whitelist = build_dotfile_settings.exec_script_whitelist + angle_dotfile_settings.exec_script_whitelist + [
    "//build_overrides/build.gni",

    "//chrome/android/webapk/shell_apk/prepare_upload_dir/BUILD.gn",
    "//chrome/version.gni",

    # https://crbug.com/474506.
    "//clank/java/BUILD.gn",
    "//clank/native/BUILD.gn",

    "//google_apis/BUILD.gn",
    "//printing/BUILD.gn",

    "//remoting/host/installer/linux/BUILD.gn",
    "//remoting/remoting_version.gni",
    "//remoting/host/installer/win/generate_clsids.gni",

    "//tools/grit/grit_rule.gni",
    "//tools/gritsettings/BUILD.gn"
]