import("//build/config/android/channel.gni")
import("//build/config/android/config.gni")
import("//weblayer/variables.gni")

declare_args() {
    webview_devui_show_icon = android_channel != "stable"
}

upstream_only_webview_deps = [
    "//android_webview:platform_service_bridge_upstream_implementation_java",
    "//android_webview/nonembedded:icon_resources"
]

if (webview_includes_weblayer) {
    upstream_only_webview_deps += [
        "//weblayer/browser/java:upstream_java"
    ]
}

webview_jinja_variables = [
    "use_isolated_splits=$weblayer_in_split"
]

webview_product_config_java_package = "org.chromium.android_webview"